services/blog-admin/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-admin-ingress
  namespace: prof-test-apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
    - host: admin.test.prof-stankin.ru
      http:
        paths:
          - path: /v1/auth
            pathType: Prefix
            backend:
              service:
                name: personal-app
                port:
                  number: 80

          - path: /v1/core
            pathType: Prefix
            backend:
              service:
                name: blog-api-svc
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-admin-svc
                port:
                  number: 80
  tls:
    - hosts:
        - admin.test.prof-stankin.ru
      secretName: blog-admin-tls
