services/blog-admin/overlays/test/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blog-admin-api-strip
  namespace: prof-test-apps
spec:
  replacePathRegex:
    regex: "^/v1/([^/]+)(/.*)?"
    replacement: "/api/v1/$1$2"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blog-admin-force-https
  namespace: prof-test-apps
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Scheme: "https"
      X-Forwarded-Port: "443"
    sslProxyHeaders:
      X-Forwarded-Proto: "https"
